deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: checks-out
  namespace: checks-out
  labels:
    app: checks-out
spec:
  type: ClusterIP
  selector:
    app: checks-out
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
